apps/user-events/k8s/user-events-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-events-ingress
  namespace: user-events-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/user-events
            pathType: Prefix
            backend:
              service:
                name: user-events-service
                port:
                  number: 3000
